Upgrade ruff and enable isort rules
Sort imports.

--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -22,22 +22,22 @@
     "from contextlib import suppress\n",
     "from pathlib import Path\n",
     "\n",
+    "import amici\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
-    "import amici\n",
     "from amici import (\n",
-    "    simulation_status_to_str,\n",
-    "    SteadyStateSensitivityMode,\n",
+    "    SbmlImporter,\n",
     "    SensitivityMethod,\n",
     "    SensitivityOrder,\n",
+    "    SteadyStateSensitivityMode,\n",
+    "    import_model_module,\n",
     "    run_simulation,\n",
+    "    simulation_status_to_str,\n",
     ")\n",
     "from amici.petab.petab_import import import_petab_problem\n",
-    "from amici.petab.simulations import simulate_petab, RDATAS, EDATAS\n",
-    "from amici.plotting import plot_state_trajectories, plot_jacobian\n",
+    "from amici.petab.simulations import EDATAS, RDATAS, simulate_petab\n",
+    "from amici.plotting import plot_jacobian, plot_state_trajectories\n",
     "from petab.v1.sbml import get_sbml_model\n",
-    "from amici import SbmlImporter, import_model_module\n",
     "\n",
     "try:\n",
     "    import benchmark_models_petab\n",
