--- a/doc/examples/example_petab/petab.ipynb
+++ b/doc/examples/example_petab/petab.ipynb
@@ -13,18 +13,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import petab\n",
-    "\n",
     "from amici import run_simulation\n",
     "from amici.petab.petab_import import import_petab_problem\n",
     "from amici.petab.petab_problem import PetabProblem\n",
     "from amici.petab.simulations import simulate_petab\n",
     "from amici.plotting import plot_state_trajectories"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,16 +43,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "model_name = \"Boehm_JProteomeRes2014\"\n",
     "# local path or URL to the yaml file for the PEtab problem\n",
     "petab_yaml = f\"https://benchmarking-initiative.github.io/Benchmark-Models-PEtab/tree/Benchmark-Models/{model_name}/{model_name}.yaml\"\n",
     "# load the problem using the PEtab library\n",
     "petab_problem = petab.Problem.from_yaml(petab_yaml)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,15 +63,17 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "amici_model = import_petab_problem(petab_problem, verbose=False, compile_=True)",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "amici_model = import_petab_problem(petab_problem, verbose=False, compile_=True)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "That's it. Now, we can use the model to perform simulations.\n",
     "\n",
@@ -84,11 +85,13 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "simulate_petab(petab_problem, amici_model)",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "simulate_petab(petab_problem, amici_model)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +102,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "parameters = {\n",
     "    x_id: x_val\n",
@@ -114,9 +119,7 @@
     "    problem_parameters=parameters,\n",
     "    scaled_parameters=True,\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,8 +132,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "app = PetabProblem(petab_problem, amici_model)\n",
     "\n",
@@ -139,32 +144,30 @@
     "\n",
     "# ExpData for a single condition:\n",
     "edata = app.get_edata(\"model1_data1\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rdata = run_simulation(\n",
     "    amici_model, solver=amici_model.create_solver(), edata=edata\n",
     ")\n",
     "rdata"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
    "source": [
     "plot_state_trajectories(rdata)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
