--- a/doc/examples/example_presimulation/ExampleExperimentalConditions.ipynb
+++ b/doc/examples/example_presimulation/ExampleExperimentalConditions.ipynb
@@ -23,10 +23,9 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
+    "import amici.plotting\n",
     "import libsbml\n",
-    "import numpy as np\n",
-    "\n",
-    "import amici.plotting"
+    "import numpy as np"
    ]
   },
   {
@@ -178,11 +177,13 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "fixed_parameters = [\"DRUG_0\", \"KIN_0\"]"
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_parameters = [\"DRUG_0\", \"KIN_0\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,10 +224,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sbml_importer.sbml2amici(\n",
     "    model_name,\n",
@@ -247,10 +248,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create Model instance\n",
     "model = model_module.get_model()\n",
@@ -260,15 +261,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": "The only thing we need to simulate the model is a timepoint vector, which can be specified using the [setTimepoints](https://amici.readthedocs.io/en/latest/generated/amici.amici.Model.html#amici.amici.Model.setTimepoints) method. If we do not specify any additional options, the default values for `fixedParameters` and `parameters` that were specified in the SBML file will be used."
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Run simulation using default model parameters and solver options\n",
     "model.set_timepoints(np.linspace(0, 60, 60))\n",
@@ -284,10 +285,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "edata = amici.ExpData(rdata, 0.1, 0.0)\n",
     "edata.fixed_parameters = [0, 2]\n",
@@ -304,10 +305,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "edata.fixed_parameters_pre_equilibration = [3, 0]\n",
     "rdata = amici.run_simulation(model, solver, edata)\n",
@@ -322,11 +323,13 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "edata.reinitialize_fixed_parameter_initial_states = True"
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edata.reinitialize_fixed_parameter_initial_states = True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -336,10 +339,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rdata = amici.run_simulation(model, solver, edata)\n",
     "amici.plotting.plot_observable_trajectories(rdata)"
@@ -351,10 +354,10 @@
    "source": "On top of preequilibration, we can also specify presimulation. This option can be used to specify pretreatments where the system is not assumed to reach steadystate. Presimulation can be activated by specifying `t_presim` and `edata.fixed_parameters_presimulation`. If both `fixed_parameters_presimulation` and `fixed_parameters_pre_equilibration` are specified, pre-equilibration will be performed first, followed by presimulation, followed by regular simulation. For this example we specify `DRUG_0=10` and `KIN_0=0` for the presimulation and `DRUG_0=10` and `KIN_0=2` for the regular simulation. We do not overwrite the `DRUG_0=3` and `KIN_0=0` that was previously specified for pre-equilibration."
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "edata.t_presim = 10\n",
     "edata.fixed_parameters_presimulation = [10.0, 0.0]\n",
