--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -29,12 +29,11 @@
     "from tempfile import TemporaryDirectory\n",
     "from uuid import uuid1\n",
     "\n",
+    "import amici\n",
     "import matplotlib as mpl\n",
     "import numpy as np\n",
     "import sympy as sp\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
-    "import amici\n",
     "\n",
     "# Choose build directory\n",
     "BUILD_PATH = None  # temporary folder\n",
@@ -1131,9 +1130,10 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import tempfile\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
