--- a/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -52,15 +52,14 @@
     "import logging\n",
     "import os\n",
     "\n",
+    "import amici\n",
     "import libsbml\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import petab\n",
     "import pypesto.petab\n",
     "import sympy as sp\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "import amici"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -362,10 +361,11 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "c6741bce012b6ffa",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Import PEtab problem into pyPESTO\n",
     "pypesto_problem = pypesto.petab.PetabImporter(\n",
@@ -377,8 +377,7 @@
     "\n",
     "# Increase maximum number of steps for AMICI\n",
     "pypesto_problem.objective.amici_solver.set_max_steps(10**5)"
-   ],
-   "id": "c6741bce012b6ffa"
+   ]
   },
   {
    "cell_type": "markdown",
