--- a/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
+++ b/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
@@ -27,10 +27,10 @@
     "# Directory to which the generated model code is written\n",
     "model_output_dir = model_name\n",
     "\n",
-    "import libsbml\n",
     "import amici\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import libsbml\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -365,10 +365,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = model_module.get_model()\n",
     "\n",
