--- a/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -93,8 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Access the results\n",
-    "results"
+    "# Define the simulation condition\n",
+    "simulation_condition = (\"model1_data1\",)\n",
+    "\n",
+    "# Access the results for the specified condition\n",
+    "ic = results[\"simulation_conditions\"].index(simulation_condition)\n",
+    "print(\"llh: \", results[\"llh\"][ic])\n",
+    "print(\"state variables: \", results[\"x\"][ic, :])"
    ]
   },
   {
@@ -356,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grad._my"
+    "grad._my[ic, :]"
    ]
   },
   {
@@ -393,7 +398,7 @@
     "nps = jax_problem._np_numeric[ic, :]\n",
     "\n",
     "# Load parameters for the specified condition\n",
-    "p = jax_problem.load_parameters(simulation_condition[0])\n",
+    "p = jax_problem.load_model_parameters(simulation_condition[0])\n",
     "\n",
     "\n",
     "# Define a function to compute the gradient with respect to dynamic timepoints\n",
@@ -612,16 +617,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8382b0b2b68f49e",
    "metadata": {},
-   "outputs": [],
+   "cell_type": "code",
    "source": [
     "# Profile gradient computation using forward sensitivity analysis\n",
     "solver.set_sensitivity_order(amici.SensitivityOrder.first)\n",
     "solver.set_sensitivity_method(amici.SensitivityMethod.forward)"
-   ]
+   ],
+   "id": "81fe95a6e7f613f1",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -687,8 +692,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
