simplify JAX API (#2998)
* refactor JAX API

* fix petabsuite

* fix sciml tests

--- a/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
+++ b/doc/examples/example_jax_petab/ExampleJaxPEtab.ipynb
@@ -21,13 +21,13 @@
     "\n",
     "To begin, we will import a model using [PEtab](https://petab.readthedocs.io). For this demonstration, we will utilize the [Benchmark Collection](https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab), which provides a diverse set of models. For more information on importing PEtab models, refer to the corresponding [PEtab notebook](https://amici.readthedocs.io/en/latest/petab.html).\n",
     "\n",
-    "In this tutorial, we will import the Böhm model from the Benchmark Collection. Using [amici.petab_import](https://amici.readthedocs.io/en/latest/generated/amici.petab_import.html#amici.petab_import.import_petab_problem), we will load the PEtab problem. To create a  [JAXModel](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel) instead of a standard AMICI model, we set the `jax` parameter to `True`.\n"
+    "In this tutorial, we will import the Böhm model from the Benchmark Collection. Using [amici.petab_import](https://amici.readthedocs.io/en/latest/generated/amici.petab_import.html#amici.petab_import.import_petab_problem), we will load the PEtab problem. To create a  [JAXProblem](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXProblem) instead of a standard AMICI model, we set the `jax` parameter to `True`.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71c96da0da3144a",
+   "id": "e5ade24ee5aca07c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,35 +44,32 @@
     "# Load the PEtab problem from the YAML file\n",
     "petab_problem = petab.Problem.from_yaml(yaml_url)\n",
     "\n",
-    "# Import the PEtab problem as a JAX-compatible AMICI model\n",
-    "jax_model = import_petab_problem(\n",
+    "# Import the PEtab problem as a JAX-compatible AMICI problem\n",
+    "jax_problem = import_petab_problem(\n",
     "    petab_problem,\n",
     "    verbose=False,  # no text output\n",
-    "    jax=True,  # return jax model\n",
+    "    jax=True,  # return jax problem\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e0f1c27bd71ee1f",
+   "id": "5d0dce1427a7883f",
    "metadata": {},
    "source": [
     "## Simulation\n",
     "\n",
-    "In principle, we can already use this model for simulation using the [simulate_condition](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXModel.simulate_condition) method. However, this approach can be cumbersome as timepoints, data etc. need to be specified manually. Instead, we process the PEtab problem into a [JAXProblem](https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.JAXProblem), which enables efficient simulation using [amici.jax.run_simulations]((https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.run_simulations)."
+    "We can now run efficient simulation using [amici.jax.run_simulations]((https://amici.readthedocs.io/en/latest/generated/amici.jax.html#amici.jax.run_simulations)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccecc9a29acc7b73",
+   "id": "4a99eccd0607793e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amici.jax import JAXProblem, run_simulations\n",
-    "\n",
-    "# Create a JAXProblem from the JAX model and PEtab problem\n",
-    "jax_problem = JAXProblem(jax_model, petab_problem)\n",
+    "from amici.jax import run_simulations\n",
     "\n",
     "# Run simulations and compute the log-likelihood\n",
     "llh, results = run_simulations(jax_problem)"
@@ -141,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f1ed397105e14a",
+   "id": "78f06ff19626df7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +165,9 @@
     "    for ix in range(results[\"x\"].shape[2]):\n",
     "        time_points = np.array(results[\"ts\"][ic, :])\n",
     "        state_values = np.array(results[\"x\"][ic, :, ix])\n",
-    "        plt.plot(time_points, state_values, label=jax_model.state_ids[ix])\n",
+    "        plt.plot(\n",
+    "            time_points, state_values, label=jax_problem.model.state_ids[ix]\n",
+    "        )\n",
     "\n",
     "    # Add labels, legend, and grid\n",
     "    plt.xlabel(\"Time\")\n",
