--- a/doc/examples/example_petab/petab.ipynb
+++ b/doc/examples/example_petab/petab.ipynb
@@ -13,7 +13,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import petab\n",
     "from amici import run_simulation\n",
@@ -21,9 +23,7 @@
     "from amici.petab.petab_problem import PetabProblem\n",
     "from amici.petab.simulations import simulate_petab\n",
     "from amici.plotting import plot_state_trajectories"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "model_name = \"Boehm_JProteomeRes2014\"\n",
     "# local path or URL to the yaml file for the PEtab problem\n",
     "petab_yaml = f\"https://benchmarking-initiative.github.io/Benchmark-Models-PEtab/tree/Benchmark-Models/{model_name}/{model_name}.yaml\"\n",
     "# load the problem using the PEtab library\n",
     "petab_problem = petab.Problem.from_yaml(petab_yaml)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +64,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": "amici_model = import_petab_problem(petab_problem, verbose=False)",
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "amici_model = import_petab_problem(petab_problem, verbose=False, compile_=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,12 +86,12 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "simulate_petab(petab_problem, amici_model)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +102,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "parameters = {\n",
     "    x_id: x_val\n",
@@ -115,9 +119,7 @@
     "    problem_parameters=parameters,\n",
     "    scaled_parameters=True,\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,7 +133,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "app = PetabProblem(petab_problem, amici_model)\n",
     "\n",
@@ -140,32 +144,30 @@
     "\n",
     "# ExpData for a single condition:\n",
     "edata = app.get_edata(\"model1_data1\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "rdata = run_simulation(\n",
     "    amici_model, solver=amici_model.create_solver(), edata=edata\n",
     ")\n",
     "rdata"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
    "source": [
     "plot_state_trajectories(rdata)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
