cleanup, model dirs

--- a/doc/examples/example_petab/petab_v2.ipynb
+++ b/doc/examples/example_petab/petab_v2.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# PEtab 2.0 import\n",
     "\n",
+    "**Note:** PEtab v2 support in AMICI is experimental and subject to change.\n",
+    "\n",
     "This notebook demonstrates how to import a [PEtab v2 problem](https://petab.readthedocs.io/en/latest/v2/documentation_data_format.html) for computing the objective function and gradient, or for simulating individual conditions using AMICI. We assume that you are already familiar with the basics of AMICI and PEtab."
    ]
   },
