--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -109,7 +109,7 @@
     "from amici import (\n",
     "    MeasurementChannel as MC,\n",
     ")\n",
-    "from amici.antimony_import import antimony2sbml\n",
+    "from amici.importers.antimony import antimony2sbml\n",
     "from amici.plotting import (\n",
     "    plot_observable_trajectories,\n",
     "    plot_state_trajectories,\n",
