--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -223,10 +223,13 @@
    "outputs": [],
    "source": [
     "# Create a spline object\n",
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "from amici.importers.sbml.splines import CubicHermiteSpline, UniformGrid\n",
+    "from amici.importers.utils import amici_time_symbol\n",
+    "\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,  # the spline function is evaluated at the current time point\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
+    "    evaluate_at=amici_time_symbol,  # the spline function is evaluated at the current time point\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[1, -1, 2],\n",
     ")"
    ]
@@ -485,10 +488,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=sp.symbols(\"f0:3\"),\n",
     ")"
    ]
@@ -619,10 +622,10 @@
    "outputs": [],
    "source": [
     "# A simple spline for which finite differencing would give a different result\n",
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[1.0, -1.0, 1.0],\n",
     "    derivatives_at_nodes=[10.0, -10.0, -10.0],\n",
     ")"
@@ -717,10 +720,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[-2, 1, -1],\n",
     "    extrapolate=(\n",
     "        None,\n",
@@ -812,10 +815,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[-2, 1, -2],  # first and last node must coincide\n",
     "    extrapolate=\"periodic\",\n",
     ")"
@@ -904,10 +907,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=4),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=4),\n",
     "    values_at_nodes=[-1, 2, 4, 2],\n",
     "    bc=\"zeroderivative\",\n",
     ")"
@@ -963,10 +966,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=4),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=4),\n",
     "    values_at_nodes=[-1, 2, 4, 2],\n",
     "    bc=\"natural\",\n",
     ")"
@@ -1029,10 +1032,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=5),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=5),\n",
     "    values_at_nodes=[2, 0.05, 0.1, 2, 1],\n",
     ")"
    ]
@@ -1068,10 +1071,10 @@
    },
    "outputs": [],
    "source": [
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = CubicHermiteSpline(\n",
     "    sbml_id=\"f\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=5),\n",
+    "    evaluate_at=amici_time_symbol,\n",
+    "    nodes=UniformGrid(0, 1, number_of_nodes=5),\n",
     "    values_at_nodes=[2, 0.05, 0.1, 2, 1],\n",
     "    logarithmic_parametrization=True,\n",
     ")"
@@ -1191,10 +1194,10 @@
     "df = None\n",
     "for n in num_nodes + amici_only_nodes:\n",
     "    # Create model\n",
-    "    spline = amici.splines.CubicHermiteSpline(\n",
+    "    spline = CubicHermiteSpline(\n",
     "        sbml_id=\"f\",\n",
-    "        evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
-    "        nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=n),\n",
+    "        evaluate_at=amici_time_symbol,\n",
+    "        nodes=UniformGrid(0, 1, number_of_nodes=n),\n",
     "        values_at_nodes=np.random.rand(n),\n",
     "    )\n",
     "    sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
