--- a/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -53,12 +53,14 @@
     "import os\n",
     "\n",
     "import amici\n",
+    "import amici.importers.sbml.splines as splines\n",
     "import libsbml\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import petab\n",
     "import pypesto.petab\n",
     "import sympy as sp\n",
+    "from amici.importers.utils import amici_time_symbol\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -176,9 +178,9 @@
     "values_at_nodes = [\n",
     "    sp.Symbol(f\"pEpoR_t{str(t).replace('.', '_dot_')}\") for t in nodes\n",
     "]  # new parameter symbols for spline values\n",
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = splines.CubicHermiteSpline(\n",
     "    sbml_id=\"pEpoR\",  # matches name of species in SBML model\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,  # the spline is evaluated at the current time\n",
+    "    evaluate_at=amici_time_symbol,  # the spline is evaluated at the current time\n",
     "    nodes=nodes,\n",
     "    values_at_nodes=values_at_nodes,  # values at the nodes (in linear scale)\n",
     "    extrapolate=(None, \"constant\"),  # because steady state is reached\n",
@@ -782,9 +784,9 @@
     "values_at_nodes = [\n",
     "    sp.Symbol(f\"pEpoR_t{str(t).replace('.', '_dot_')}\") for t in nodes\n",
     "]\n",
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = splines.CubicHermiteSpline(\n",
     "    sbml_id=\"pEpoR\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
+    "    evaluate_at=amici_time_symbol,\n",
     "    nodes=nodes,\n",
     "    values_at_nodes=values_at_nodes,\n",
     "    extrapolate=(None, \"constant\"),\n",
@@ -1492,9 +1494,9 @@
     "    sp.Symbol(f\"derivative_pEpoR_t{str(t).replace('.', '_dot_')}\")\n",
     "    for t in nodes[:-1]\n",
     "]\n",
-    "spline = amici.splines.CubicHermiteSpline(\n",
+    "spline = splines.CubicHermiteSpline(\n",
     "    sbml_id=\"pEpoR\",\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
+    "    evaluate_at=amici_time_symbol,\n",
     "    nodes=nodes,\n",
     "    values_at_nodes=values_at_nodes,\n",
     "    derivatives_at_nodes=derivatives_at_nodes\n",
