--- a/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/doc/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -1593,7 +1593,9 @@
    "source": [
     "# Derivative parameters must be added separately\n",
     "for p in derivatives_at_nodes:\n",
-    "    amici.sbml_utils.add_parameter(sbml_model, p, value=0.0, constant=True)"
+    "    amici.importers.sbml.utils.add_parameter(\n",
+    "        sbml_model, p, value=0.0, constant=True\n",
+    "    )"
    ]
   },
   {
