fix argument names

--- a/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
+++ b/doc/examples/example_steady_states/ExampleEquilibrationLogic.ipynb
@@ -79,10 +79,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Import necessary libraries and define the model\n",
     "import os\n",
@@ -165,16 +165,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Import the model\n",
     "sbml_importer = amici.SbmlImporter(antimony2sbml(ant_model), from_file=False)\n",
     "\n",
     "# specify observables and constant parameters\n",
-    "constant_parameters = [\"synthesis_substrate\", \"init_enzyme\"]\n",
+    "fixed_parameters = [\"synthesis_substrate\", \"init_enzyme\"]\n",
     "observation_model = [\n",
     "    MC(id_=\"observable_product\", name=\"\", formula=\"product\"),\n",
     "    MC(id_=\"observable_substrate\", name=\"\", formula=\"substrate\"),\n",
@@ -188,7 +188,7 @@
     "    model_name,\n",
     "    model_output_dir,\n",
     "    observation_model=observation_model,\n",
-    "    constant_parameters=constant_parameters,\n",
+    "    fixed_parameters=fixed_parameters,\n",
     "    compute_conservation_laws=False,\n",
     ")\n",
     "\n",
@@ -198,7 +198,7 @@
     "    model_reduced_name,\n",
     "    model_reduced_output_dir,\n",
     "    observation_model=observation_model,\n",
-    "    constant_parameters=constant_parameters,\n",
+    "    fixed_parameters=fixed_parameters,\n",
     ")"
    ]
   },
