--- a/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
+++ b/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
@@ -134,9 +134,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constant parameters\n",
+    "### Fixed parameters\n",
     "\n",
-    "Constant parameters, i.e. parameters with respect to which no sensitivities are to be computed (these are often parameters specifying a certain experimental condition) are provided as a list of parameter names."
+    "Fixed parameters, i.e. parameters with respect to which no sensitivities are to be computed (these are often parameters specifying a certain experimental condition) are provided as a list of parameter names."
    ]
   },
   {
@@ -144,9 +144,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "constant_parameters = [\"k0\"]"
-   ]
+   "source": "fixed_parameters = [\"k0\"]"
   },
   {
    "cell_type": "markdown",
@@ -335,7 +333,7 @@
     "    model_output_dir,\n",
     "    verbose=logging.INFO,\n",
     "    observation_model=observation_model,\n",
-    "    constant_parameters=constant_parameters,\n",
+    "    fixed_parameters=fixed_parameters,\n",
     ")"
    ]
   },
