--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -627,7 +627,9 @@
     "unscaled_parameter = dict(\n",
     "    zip(\n",
     "        amici_model.get_parameter_ids(),\n",
-    "        starmap(amici.unscale_parameter, zip(edata.parameters, edata.pscale)),\n",
+    "        starmap(\n",
+    "            amici.unscale_parameter, zip(edata.free_parameters, edata.pscale)\n",
+    "        ),\n",
     "    )\n",
     ")\n",
     "print(dict((p, unscaled_parameter[p]) for p in (\"Kd\", \"Kp\", \"n_par\")))"
