get_parameter_names

--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -589,9 +589,9 @@
    "source": [
     "# Sensitivities with respect to the spline values can be computed\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 0], label=model.get_parameter_names()[0])\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 1], label=model.get_parameter_names()[1])\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 2], label=model.get_parameter_names()[2])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 0], label=model.get_free_parameter_names()[0])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 1], label=model.get_free_parameter_names()[1])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 2], label=model.get_free_parameter_names()[2])\n",
     "ax.set_xlabel(\"time\")\n",
     "ax.set_ylabel(\"sensitivity\")\n",
     "ax.legend();"
