free parameter ids

--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -626,7 +626,7 @@
     "\n",
     "unscaled_parameter = dict(\n",
     "    zip(\n",
-    "        amici_model.get_parameter_ids(),\n",
+    "        amici_model.get_free_parameter_ids(),\n",
     "        starmap(\n",
     "            amici.unscale_parameter, zip(edata.free_parameters, edata.pscale)\n",
     "        ),\n",
