--- a/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
+++ b/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
@@ -371,7 +371,7 @@
     "model = model_module.get_model()\n",
     "\n",
     "print(\"Model name:            \", model.get_name())\n",
-    "print(\"Model parameters:      \", model.get_parameter_ids())\n",
+    "print(\"Model parameters:      \", model.get_free_parameter_ids())\n",
     "print(\"Model outputs:         \", model.get_observable_ids())\n",
     "print(\"Model state variables: \", model.get_state_ids())"
    ]
@@ -415,7 +415,7 @@
     "print(\n",
     "    \"Simulation was run using model default parameters as specified in the SBML model:\"\n",
     ")\n",
-    "print(dict(zip(model.get_parameter_ids(), model.get_parameters())))"
+    "print(dict(zip(model.get_free_parameter_ids(), model.get_parameters())))"
    ]
   },
   {
@@ -1113,7 +1113,7 @@
     "model = model_module.get_model()\n",
     "p_orig = np.array(model.get_parameters())\n",
     "p_orig[\n",
-    "    list(model.get_parameter_ids()).index(\"observable_x1withsigma_sigma\")\n",
+    "    list(model.get_free_parameter_ids()).index(\"observable_x1withsigma_sigma\")\n",
     "] = 0.1  # Change default parameter\n",
     "model.set_parameters(p_orig)\n",
     "model.set_parameter_scale(amici.ParameterScaling.none)\n",
