--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -90,7 +90,7 @@
     "    # Setup simulation timepoints and parameters\n",
     "    model = model_module.get_model()\n",
     "    for name, value in parameters.items():\n",
-    "        model.set_parameter_by_name(name, value)\n",
+    "        model.set_free_parameter_by_name(name, value)\n",
     "    if isinstance(T, int | float):\n",
     "        T = np.linspace(0, T, 100)\n",
     "    model.set_timepoints([float(t) for t in T])\n",
