Harmonize Fixed parameter Names (#3027)
* refactor model components

* fix argument names

* Update de_model_components.py

* refactor de_model

* refactor cpp code

* fixups cpp

* fixup id confusion

* fixup

* doc

* get_parameter_names

* free parameter ids

* more renaming

* update templates, regenerate test models

* Rename py

* some more

* ..

* ..

* Update test_pregenerated_models.py

* fix pysb tests

* clang-format

* changelog

* numpy

* Apply suggestions from code review

---------

Co-authored-by: Daniel Weindl <daniel.weindl@uni-bonn.de>
Co-authored-by: Daniel Weindl <dweindl@users.noreply.github.com>

--- a/doc/examples/example_errors.ipynb
+++ b/doc/examples/example_errors.ipynb
@@ -626,8 +626,10 @@
     "\n",
     "unscaled_parameter = dict(\n",
     "    zip(\n",
-    "        amici_model.get_parameter_ids(),\n",
-    "        starmap(amici.unscale_parameter, zip(edata.parameters, edata.pscale)),\n",
+    "        amici_model.get_free_parameter_ids(),\n",
+    "        starmap(\n",
+    "            amici.unscale_parameter, zip(edata.free_parameters, edata.pscale)\n",
+    "        ),\n",
     "    )\n",
     ")\n",
     "print(dict((p, unscaled_parameter[p]) for p in (\"Kd\", \"Kp\", \"n_par\")))"
