--- a/doc/examples/example_splines/ExampleSplines.ipynb
+++ b/doc/examples/example_splines/ExampleSplines.ipynb
@@ -90,7 +90,7 @@
     "    # Setup simulation timepoints and parameters\n",
     "    model = model_module.get_model()\n",
     "    for name, value in parameters.items():\n",
-    "        model.set_parameter_by_name(name, value)\n",
+    "        model.set_free_parameter_by_name(name, value)\n",
     "    if isinstance(T, int | float):\n",
     "        T = np.linspace(0, T, 100)\n",
     "    model.set_timepoints([float(t) for t in T])\n",
@@ -589,9 +589,9 @@
    "source": [
     "# Sensitivities with respect to the spline values can be computed\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 0], label=model.get_parameter_names()[0])\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 1], label=model.get_parameter_names()[1])\n",
-    "ax.plot(rdata[\"t\"], rdata.sx[:, 2], label=model.get_parameter_names()[2])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 0], label=model.get_free_parameter_names()[0])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 1], label=model.get_free_parameter_names()[1])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 2], label=model.get_free_parameter_names()[2])\n",
     "ax.set_xlabel(\"time\")\n",
     "ax.set_ylabel(\"sensitivity\")\n",
     "ax.legend();"
