--- a/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
+++ b/doc/examples/getting_started_extended/GettingStartedExtended.ipynb
@@ -134,9 +134,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Constant parameters\n",
+    "### Fixed parameters\n",
     "\n",
-    "Constant parameters, i.e. parameters with respect to which no sensitivities are to be computed (these are often parameters specifying a certain experimental condition) are provided as a list of parameter names."
+    "Fixed parameters, i.e. parameters with respect to which no sensitivities are to be computed (these are often parameters specifying a certain experimental condition) are provided as a list of parameter names."
    ]
   },
   {
@@ -144,9 +144,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "constant_parameters = [\"k0\"]"
-   ]
+   "source": "fixed_parameters = [\"k0\"]"
   },
   {
    "cell_type": "markdown",
@@ -335,7 +333,7 @@
     "    model_output_dir,\n",
     "    verbose=logging.INFO,\n",
     "    observation_model=observation_model,\n",
-    "    constant_parameters=constant_parameters,\n",
+    "    fixed_parameters=fixed_parameters,\n",
     ")"
    ]
   },
@@ -373,7 +371,7 @@
     "model = model_module.get_model()\n",
     "\n",
     "print(\"Model name:            \", model.get_name())\n",
-    "print(\"Model parameters:      \", model.get_parameter_ids())\n",
+    "print(\"Model parameters:      \", model.get_free_parameter_ids())\n",
     "print(\"Model outputs:         \", model.get_observable_ids())\n",
     "print(\"Model state variables: \", model.get_state_ids())"
    ]
@@ -417,7 +415,7 @@
     "print(\n",
     "    \"Simulation was run using model default parameters as specified in the SBML model:\"\n",
     ")\n",
-    "print(dict(zip(model.get_parameter_ids(), model.get_parameters())))"
+    "print(dict(zip(model.get_free_parameter_ids(), model.get_free_parameters())))"
    ]
   },
   {
@@ -1113,11 +1111,11 @@
    "source": [
     "# Set model options\n",
     "model = model_module.get_model()\n",
-    "p_orig = np.array(model.get_parameters())\n",
+    "p_orig = np.array(model.get_free_parameters())\n",
     "p_orig[\n",
-    "    list(model.get_parameter_ids()).index(\"observable_x1withsigma_sigma\")\n",
+    "    list(model.get_free_parameter_ids()).index(\"observable_x1withsigma_sigma\")\n",
     "] = 0.1  # Change default parameter\n",
-    "model.set_parameters(p_orig)\n",
+    "model.set_free_parameters(p_orig)\n",
     "model.set_parameter_scale(amici.ParameterScaling.none)\n",
     "model.set_timepoints(np.linspace(0, 10, 21))\n",
     "\n",
@@ -1174,12 +1172,12 @@
     "        p[plist] = x0\n",
     "    verbose and print(f\"f: p={p}\")\n",
     "\n",
-    "    old_parameters = model.get_parameters()\n",
+    "    old_parameters = model.get_free_parameters()\n",
     "    solver.set_sensitivity_order(amici.SensitivityOrder.none)\n",
-    "    model.set_parameters(p)\n",
+    "    model.set_free_parameters(p)\n",
     "    rdata = amici.run_simulation(model, solver, edata)\n",
     "\n",
-    "    model.set_parameters(old_parameters)\n",
+    "    model.set_free_parameters(old_parameters)\n",
     "\n",
     "    res = np.sum(rdata[symbol])\n",
     "    verbose and print(res)\n",
@@ -1196,13 +1194,13 @@
     "        model.require_sensitivities_for_all_parameters()\n",
     "    verbose and print(f\"g: p={p}\")\n",
     "\n",
-    "    old_parameters = model.get_parameters()\n",
+    "    old_parameters = model.get_free_parameters()\n",
     "    solver.set_sensitivity_method(amici.SensitivityMethod.forward)\n",
     "    solver.set_sensitivity_order(amici.SensitivityOrder.first)\n",
-    "    model.set_parameters(p)\n",
+    "    model.set_free_parameters(p)\n",
     "    rdata = amici.run_simulation(model, solver, edata)\n",
     "\n",
-    "    model.set_parameters(old_parameters)\n",
+    "    model.set_free_parameters(old_parameters)\n",
     "\n",
     "    res = rdata[f\"s{symbol}\"]\n",
     "    if not isinstance(res, float):\n",
@@ -1257,7 +1255,7 @@
    "outputs": [],
    "source": [
     "eps = 1e-4\n",
-    "op = model.get_parameters()\n",
+    "op = model.get_free_parameters()\n",
     "\n",
     "\n",
     "solver.set_sensitivity_method(\n",
@@ -1273,23 +1271,23 @@
     "\n",
     "def fd(x0, ip, eps, symbol=\"llh\"):\n",
     "    p = list(x0[:])\n",
-    "    old_parameters = model.get_parameters()\n",
+    "    old_parameters = model.get_free_parameters()\n",
     "    solver.set_sensitivity_order(amici.SensitivityOrder.none)\n",
     "    p[ip] += eps\n",
-    "    model.set_parameters(p)\n",
+    "    model.set_free_parameters(p)\n",
     "    rdata_f = amici.run_simulation(model, solver, edata)\n",
     "    p[ip] -= 2 * eps\n",
-    "    model.set_parameters(p)\n",
+    "    model.set_free_parameters(p)\n",
     "    rdata_b = amici.run_simulation(model, solver, edata)\n",
     "\n",
-    "    model.set_parameters(old_parameters)\n",
+    "    model.set_free_parameters(old_parameters)\n",
     "    return (rdata_f[symbol] - rdata_b[symbol]) / (2 * eps)\n",
     "\n",
     "\n",
     "def plot_sensitivities(symbol, eps):\n",
     "    fig, axes = plt.subplots(4, 2, figsize=(15, 10))\n",
     "    for ip in range(4):\n",
-    "        fd_approx = fd(model.get_parameters(), ip, eps, symbol=symbol)\n",
+    "        fd_approx = fd(model.get_free_parameters(), ip, eps, symbol=symbol)\n",
     "\n",
     "        axes[ip, 0].plot(\n",
     "            edata.get_timepoints(), rdata[f\"s{symbol}\"][:, ip, :], \"r-\"\n",
